--- a/Register.html
+++ b/Register.html
@@ -18,6 +18,18 @@
             <input type="radio" name="gender">male
             <input type="radio" name="gender">Female<br><br>
             <input type="checkbox">I AGREE<br><br>
+            User name &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp :&nbsp &nbsp &nbsp &nbsp
+            <input type="number" name="number" maxlength=10 minlength=10><br><br>
+            E-mail &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:&nbsp &nbsp &nbsp &nbsp
+            <input type="mail" name="email"><br><br>
+            Address &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:&nbsp &nbsp &nbsp &nbsp
+            <br>
+            <textarea id="address" name="address" placeholder="Write something.." cols="80" rows="5"></textarea>
+            <br><br
+            Password &nbsp:&nbsp &nbsp &nbsp&nbsp
+            <input type="password" name="password"><br><br>
+            Date&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            <input type="date" name="date"><br><br>
             <button>REGISTER</button><br><br>
         </form>
     </center>
