--- a/Register.html
+++ b/Register.html
@@ -12,7 +12,8 @@
             <b>REGISTER</b> <br><br>
             <label>Username: </label>
             <input type="text"><br><br>
-            <input type="number" name="number" maxlength=10 minlength=10><br><br>
+            <label>phone number: </label>
+            <input type="phone number" name="number" maxlength=10 minlength=10><br><br>
             E-mail &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:&nbsp &nbsp &nbsp &nbsp
             <input type="mail" name="email"><br><br>
             Address &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:&nbsp &nbsp &nbsp &nbsp
